# zitech_center_workspace

./: .gitignore  404.html  error-documentation.mdc  index.html  install.ps1  lessons-learned.mdc  sitemap.xml
.clinerules/: directory-structure.mdc  memory.mdc  rules.mdc
active_context/: index.html
architecture/: index.html
building_and_deploying/: index.html
placeholder/: index.html
product_requirement_docs/: index.html
zi_coder_agent/: .pre-commit-config.yaml  README.md  alembic.ini  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  tox.ini
zi_coder_agent/config/: placeholder.md
zi_coder_agent/docs/: active_context.md  architecture.md  building_and_deploying.md  index.md  placeholder.md  product_requirement_docs.md  running_the_server.md  tasks_plan.md  technical.md  virtual_environment_setup.md
zi_coder_agent/src/zi_coder_agent/: __init__.py
zi_coder_agent/src/zi_coder_agent/api_server/: __init__.py
zi_coder_agent/src/zi_coder_agent/cache_management/: __init__.py
zi_coder_agent/src/zi_coder_agent/database/: __init__.py
zi_coder_agent/src/zi_coder_agent/mcp_server_management/: __init__.py
zi_coder_agent/src/zi_coder_agent/model_management/: __init__.py
zi_coder_agent/src/zi_coder_agent/worker_management/: __init__.py
zi_coder_agent/tasks/: placeholder.md
zi_coder_agent/tests/: test_api_server.py  test_cache_management.py  test_database.py  test_mcp_server_management.py  test_model_management.py  test_placeholder.py  test_worker_management.py
zi_coder_agent/utils/: placeholder.md
(+12 files in other folders)
