[project]
name = "zi-coder-agent"
version = "0.1.0"
description = "A modular system for managing LLM models, MCP servers, caching, workers, and API endpoints."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "Flask>=2.0.1",
    "SQLAlchemy>=1.4.41",
    "Alembic>=1.8.1",
    "redis>=4.0.2",
    "celery>=5.2.7",
    "pymysql>=1.0.2",
    "flask-swagger-ui>=4.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-cov>=4.0.0",
    "black>=22.10.0",
    "isort>=5.10.1",
    "pylint>=2.15.5",
    "flake8>=5.0.4",
    "ruff>=0.0.292",
    "djlint>=1.19.7",
    "yamllint>=1.28.0",
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "S", "BLE", "B", "A", "C4", "DTZ", "EM", "EXE", "G", "INP", "ISC", "LOG", "PIE", "PT", "PTH", "RET", "RSE", "SLF", "SLOT", "TCH", "TID", "TRY", "T20", "COM", "ERA"]
